--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,5 @@ jobs:
         # You may pin to the exact commit or the version.
         # uses: JS-DevTools/npm-publish@0f451a94170d1699fd50710966d48fb26194d939
         uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
