Possible to set size and opacity modifiers - sizeOverLifeTime and opacityOverLifeTime. There is a possibility to use predefined curve modifiers - thanks to the easing-function npm package - and it's possible to use custom functions to modify these values based on the lifetime percentage. Minor refact.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@newkrok/three-particles",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "Particle system for ThreeJS",
   "main": "src/js/three-particles.js",
   "bin": {
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/NewKrok/three-particles#readme",
   "dependencies": {
-    "three": "^0.135.0"
+    "three": "0.135.0",
+    "easing-functions": "1.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
