--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@newkrok/three-particles",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "Particle system for ThreeJS",
   "main": "src/js/three-particles.js",
   "bin": {
@@ -23,8 +23,9 @@
   },
   "homepage": "https://github.com/NewKrok/three-particles#readme",
   "dependencies": {
-    "three": "0.135.0",
-    "easing-functions": "1.0.1"
+    "easing-functions": "1.0.1",
+    "three": "0.136.0",
+    "three-noise": "^1.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
