--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@newkrok/three-particles",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "Particle system for ThreeJS",
   "main": "src/js/three-particles.js",
   "bin": {
@@ -28,7 +28,8 @@
   "dependencies": {
     "easing-functions": "1.0.1",
     "three": "0.137.0",
-    "three-noise": "^1.1.1"
+    "three-noise": "^1.1.1",
+    "@newkrok/three-utils": "0.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
