--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@newkrok/three-particles",
-  "version": "0.7.1",
+  "version": "0.8.0",
   "description": "Particle system for ThreeJS",
   "main": "src/js/three-particles.js",
   "bin": {
@@ -27,8 +27,8 @@
   "homepage": "https://github.com/NewKrok/three-particles#readme",
   "dependencies": {
     "easing-functions": "1.0.1",
-    "three": "0.137.0",
-    "three-noise": "^1.1.1",
+    "three": "0.140.0",
+    "three-noise": "1.1.2",
     "@newkrok/three-utils": "0.1.0"
   },
   "scripts": {
