chore: build optimization

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
+  "sourceMap": false,
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
