--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/js/effects/three-particles/three-particles.js",
   "types": "dist/js/effects/three-particles/three-particles.d.ts",
   "files": [
-    "dist",
+    "dist/",
     "README.md",
     "LICENSE"
   ],
@@ -46,24 +46,26 @@
     "url": "https://github.com/NewKrok/three-particles/issues"
   },
   "homepage": "https://github.com/NewKrok/three-particles#readme",
-  "dependencies": {
-    "@newkrok/three-utils": "^1.0.0",
-    "easing-functions": "1.0.1",
-    "three": "^0.172.0",
-    "three-noise": "1.1.2"
-  },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --outDir dist",
     "prepublishOnly": "npm run build",
     "test": "jest",
     "test:watch": "jest --watch"
+  },
+  "dependencies": {
+    "@newkrok/three-utils": "^1.0.0",
+    "easing-functions": "1.0.1",
+    "three-noise": "1.1.2"
+  },
+  "peerDependencies": {
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-typescript": "^7.26.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.4",
-    "@types/three": "^0.171.0",
+    "@types/three": "^0.172.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
