--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Disable Jekyll
+        run: echo "" > docs/.nojekyll
+
       - name: Check out repository
         uses: actions/checkout@v3
 
