--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "build": "tsc --outDir dist",
     "prepublishOnly": "npm run build",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "lint": "eslint src"
   },
   "dependencies": {
     "@newkrok/three-utils": "^1.0.0",
@@ -66,8 +67,15 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.4",
     "@types/three": "^0.172.0",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
     "babel-jest": "^29.7.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
+    "madge": "^8.0.0",
     "prettier": "^3.4.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
