--- a/.github/workflows/circular-dependencies.yml
+++ b/.github/workflows/circular-dependencies.yml
@@ -8,6 +8,11 @@ on:
 jobs:
   check-circular:
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
