--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "2.0.0",
   "type": "module",
   "description": "Three.js-based high-performance particle system library designed for creating visually stunning particle effects with ease. Perfect for game developers and 3D applications.",
-  "main": "dist/js/effects/three-particles/three-particles.js",
-  "types": "dist/js/effects/three-particles/three-particles.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "dist/three-particles.d.ts",
   "files": [
     "dist/",
     "README.md",
@@ -12,12 +13,8 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/js/effects/three-particles/index.js",
-      "types": "./dist/js/effects/three-particles/index.d.ts"
-    },
-    "./effects/three-particles": {
-      "import": "./dist/js/effects/three-particles/index.js",
-      "types": "./dist/js/effects/three-particles/index.d.ts"
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
     }
   },
   "repository": {
@@ -47,7 +44,7 @@
   },
   "homepage": "https://github.com/NewKrok/three-particles#readme",
   "scripts": {
-    "build": "tsc --outDir dist",
+    "build": "rmdir /s /q dist && tsc && webpack --config webpack.config.js",
     "prepublishOnly": "npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -77,9 +74,14 @@
     "jest": "^29.7.0",
     "madge": "^8.0.0",
     "prettier": "^3.4.2",
+    "terser-webpack-plugin": "^5.3.11",
     "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typedoc": "^0.27.6",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3",
+    "webpack": "^5.97.1",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^6.0.1"
   }
 }
