--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "prepublishOnly": "npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "prepare": "husky"
   },
   "dependencies": {
     "@newkrok/three-utils": "^1.0.0",
@@ -61,6 +62,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-typescript": "^7.26.0",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.4",
     "@types/three": "^0.175.0",
@@ -71,6 +74,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "madge": "^8.0.0",
     "prettier": "^3.4.2",
