fix: update Node.js version to 18 and fix Jest os.availableParallelism() error
- Update all GitHub Actions workflows to use Node.js 18
- Upgrade actions to latest versions (@v4)
- Add maxWorkers configuration to Jest to fix os.availableParallelism() compatibility
- Add Node.js engines requirement (>=18.0.0) to package.json
- Add .nvmrc file to specify Node.js version
- Replace npm install with npm ci in workflows for better performance

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "url": "https://github.com/NewKrok/three-particles/issues"
   },
   "homepage": "https://github.com/NewKrok/three-particles#readme",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "rimraf dist && tsc && webpack --config webpack.config.js",
     "prepublishOnly": "npm run build",
