--- a/.github/workflows/bundle-size-check.yml
+++ b/.github/workflows/bundle-size-check.yml
@@ -10,27 +10,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Build project
-      run: npm run build
+      - name: Build project
+        run: npm run build
 
-    - name: Generate bundle report
-      run: |
-        npm run build
-        cat dist/bundle-report.json
+      - name: Generate bundle report
+        run: |
+          npm run build
+          cat dist/bundle-report.json
 
-    - name: Post bundle size comment
-      uses: marocchino/sticky-pull-request-comment@v2
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        path: dist/bundle-report.json
+      - name: Post bundle size comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: dist/bundle-report.json
