--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -14,15 +14,15 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Generate Typedoc documentation
         run: npx typedoc
